fixed contrast

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -51,14 +51,14 @@ figcaption {
 
 footer {
     grid-column: 1/3;
-    color: #ddd;
+    color: #fff;
     padding: .5em .5em 2em;
     background-color: #555;
     text-align: center;
 }
 
 #lastModified {
-    color: rgb(227, 140, 0);
+    color: #fffb00;
 }
 
 
